fix: fix table text alignment and removes template from website

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -6,6 +6,10 @@ body {
   text-align: justify;
 }
 
+table {
+  text-align: left;
+}
+
 h1, h2, h3, h4, h5 {
   font-family: 'Roboto Slab';
   text-align: left;
